config_map_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmvol
spec:
  volumes:
    - name: volmap
      configMap:
        name: multimap
  containers:
    - name: hello-ctr
      image: nigelpoulton/k8sbook:1.0
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: volmap
          mountPath: /etc/name
---
apiVersion: v1
kind: Pod
metadata:
  name: cm-app
spec:
  containers:
    - name: hello-ctr
      image: nigelpoulton/k8sbook:1.0
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: cm-app-2
spec:
  containers:
    - name: hello-ctr
      image: nigelpoulton/k8sbook:1.0
      command: ["/bin/sh", "-c", "echo First name $(FIRSTNAME) last name $(LASTNAME)"]
      ports:
        - containerPort: 8080
