container_level_non_root_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  # Applies to all containers
  securityContext:
    runAsUser: 1000
  containers:
    - name: demo
      image: exmaple.io/simple:1.0
      # Overrides the Pod settings
      securityContext:
        runAsUser: 2000
