pod_level_non_root_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  # Applies to all containers
  securityContext:
    # Non-root user
    runAsUser: 1000
  containers:
    - name: demo
      image: example.io/simple:1.0
