pod_without_service_account_token.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-account-example-pod
spec:
  serviceAccountName: some-service-account
  automountServiceACcountToken: false
  ... TODO
