prevent_privelege_escalation_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
    - name: demo
      image: example.io/simple:1.0
      securityContext:
        allowPrivilegeEscalation: false
