storage_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  volumes:
    - name: data
      persitentVolumeClaim:
        clainName: mypvc
  containers:
    ...
