dual_stack_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dual-stack-svc
spec:
  # Uses ipv4 and ipv6
  ipFamilyPolicy: PreferDualStack
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: hello-world
