load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-lb
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 8080
  selector:
    chapter: services
