shield_app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shield
  labels:
    env: marvel

---

apiVersion: v1
kind: Service
metadata:
  namespace: shield
  name: the-bus
spec:
  type: NodePort
  ports:
    - nodePort: 31112
      port: 8080
      targetPort: 8080
  selector:
    env: marvel

---

apiVersion: v1
kind: Pod
metadata:  
  namespace: shield
  name: triskelion
  labels:
    env: marvel
spec:
  containers:
    - image: nigelpoulton/k8sbook:shield-01
      name: bus-ctr
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
