statefulset_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-prod
spec:
  clusterIP: None # Headless Service
  selector:
    app: mongo
    env: prod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-mongo
spec:
  serviceName: mongo-prod # Governing Service
