ingress_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcu-all
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shield.mcu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-shield
                  port:
                    number: 8080
    - host: hydra.mcu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-hydra
                  port:
                    number: 8080
    - host: mcu.com
      http:
        paths:
          - path: /shield
            pathType: Prefix
            backend:
              service:
                name: svc-shield
                  port:
                    number: 8080
          - path: /hydra
            pathType: Prefix
            backend:
              service:
                name: svc-hydra
                  port:
                    number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-shield
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    env: shield
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hydra
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    env: hydra
---
apiVersion: v1
kind: Pod
metadata:
  name: shield
  labels:
    env: shield
spec:
  containers:
    - image: nigelpoulton/k8sbook:shield-ingress
      name: shield-ctr
      ports:
        - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: hydra
  labels:
    env: hydra
spec:
  containers:
    - image: nigelpoulton/k8sbook:shield-ingress
      name: hydra-ctr
      ports:
        - port: 8080
          imagePullPolicy: Always
